--- a/Diabetes_Random_Foreset_Classifier.ipynb
+++ b/Diabetes_Random_Foreset_Classifier.ipynb
@@ -51,11 +51,11 @@
       },
       "outputs": [],
       "source": [
-        "labs = pd.read_csv('C:\\\\Users\\\\Ethan\\\\OneDrive\\\\Desktop\\\\Ominous Void\\\\National Health and Nutrition Examination Survey Dataset\\\\labs.csv')\n",
-        "exam = pd.read_csv('C:\\\\Users\\\\Ethan\\\\OneDrive\\\\Desktop\\\\Ominous Void\\\\National Health and Nutrition Examination Survey Dataset\\\\examination.csv')\n",
-        "demo = pd.read_csv('C:\\\\Users\\\\Ethan\\\\OneDrive\\\\Desktop\\\\Ominous Void\\\\National Health and Nutrition Examination Survey Dataset\\\\demographic.csv')\n",
-        "diet = pd.read_csv('C:\\\\Users\\\\Ethan\\\\OneDrive\\\\Desktop\\\\Ominous Void\\\\National Health and Nutrition Examination Survey Dataset\\\\diet.csv')\n",
-        "ques = pd.read_csv('C:\\\\Users\\\\Ethan\\\\OneDrive\\\\Desktop\\\\Ominous Void\\\\National Health and Nutrition Examination Survey Dataset\\\\questionnaire.csv')\n",
+        "labs = pd.read_csv('C:\\\\Users\\\\redacted\\\\OneDrive\\\\Desktop\\\\Ominous Void\\\\National Health and Nutrition Examination Survey Dataset\\\\labs.csv')\n",
+        "exam = pd.read_csv('C:\\\\Users\\\\redacted\\\\OneDrive\\\\Desktop\\\\Ominous Void\\\\National Health and Nutrition Examination Survey Dataset\\\\examination.csv')\n",
+        "demo = pd.read_csv('C:\\\\Users\\\\redacted\\\\OneDrive\\\\Desktop\\\\Ominous Void\\\\National Health and Nutrition Examination Survey Dataset\\\\demographic.csv')\n",
+        "diet = pd.read_csv('C:\\\\Users\\\\redacted\\\\OneDrive\\\\Desktop\\\\Ominous Void\\\\National Health and Nutrition Examination Survey Dataset\\\\diet.csv')\n",
+        "ques = pd.read_csv('C:\\\\Users\\\\redacted\\\\OneDrive\\\\Desktop\\\\Ominous Void\\\\National Health and Nutrition Examination Survey Dataset\\\\questionnaire.csv')\n",
         "\n",
         "# removes SEQN from 4/5 datasets to prevent dupliates\n",
         "exam.drop(['SEQN'], axis = 1, inplace=True)\n",
@@ -137,11 +137,11 @@
       },
       "outputs": [],
       "source": [
-        "labs = pd.read_csv('/content/drive/MyDrive/Ethan Tiong/labs.csv')\n",
-        "exam = pd.read_csv('/content/drive/MyDrive/Ethan Tiong/examination.csv')\n",
-        "demo = pd.read_csv('/content/drive/MyDrive/Ethan Tiong/demographic.csv')\n",
-        "diet = pd.read_csv('/content/drive/MyDrive/Ethan Tiong/diet.csv')\n",
-        "ques = pd.read_csv('/content/drive/MyDrive/Ethan Tiong/questionnaire.csv')\n",
+        "labs = pd.read_csv('/content/drive/MyDrive/redacted/labs.csv')\n",
+        "exam = pd.read_csv('/content/drive/MyDrive/redacted/examination.csv')\n",
+        "demo = pd.read_csv('/content/drive/MyDrive/redacted/demographic.csv')\n",
+        "diet = pd.read_csv('/content/drive/MyDrive/redacted/diet.csv')\n",
+        "ques = pd.read_csv('/content/drive/MyDrive/redacted/questionnaire.csv')\n",
         "\n",
         "# removes SEQN from 4/5 datasets to prevent dupliates\n",
         "exam.drop(['SEQN'], axis = 1, inplace=True)\n",
